<resources>
    <string name="app_name">VetApp</string>
    <string name="sign_in">Sign in</string>
    <string name="password">password</string>
    <string name="login">login</string>
    <string name="employee_s_personal_account">EMPLOYEE`S PERSONAL ACCOUNT</string>
    <string name="full_name">Full Name:</string>
    <string name="position">Position:</string>
    <string name="date_of_birth">Date of Birth:</string>
    <string name="phone">Phone:</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_worker2">WorkerActivity2</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="tables">Tables</string>
    <string name="employees">EMPLOYEES</string>
    <string name="clients">CLIENTS</string>
    <string name="pets">PETS</string>
    <string name="drugs">DRUGS</string>
    <string name="drug_requests">DRUG REQUESTS</string>
    <string name="services">SERVICES</string>
    <string name="schedule_of_visit">SCHEDULE OF VISIT</string>
    <string name="actions">Actions</string>
    <string name="log_out">Log out</string>
    <string name="i_am_a_client">I am a client</string>
    <string name="employee_table">EMPLOYEE TABLE</string>
    <string name="full_name_">FULL NAME</string>
    <string name="position_">POSITION</string>
    <string name="date_of_birth_">DATE OF BIRTH</string>
    <string name="phone_">PHONE</string>
    <string name="pet_table">PET TABLE</string>
    <string name="client_id">CLIENT ID</string>
    <string name="animal">ANIMAL</string>
    <string name="name">NAME</string>
    <string name="gender">GENDER</string>
    <string name="weight">WEIGHT</string>
    <string name="client_table">CLIENT TABLE</string>
    <string name="address_">Address:</string>
    <string name="regular">REGULAR</string>
    <string name="drug_table">DRUG TABLE</string>
    <string name="amount">AMOUNT</string>
    <string name="drug_request_table">DRUG REQUEST TABLE</string>
    <string name="worker_id">WORKER ID</string>
    <string name="drug_id">DRUG ID</string>
    <string name="date_of_request">DATE OF REQUEST</string>
    <string name="date_of_supply">DATE OF SUPPLY</string>
    <string name="service_table">SERVICE TABLE</string>
    <string name="time_of_service_delivery">TIME OF SERVICE DELIVERY</string>
    <string name="amount_of_money">AMOUNT OF MONEY</string>
    <string name="schedule_of_visit_table">SCHEDULE OF VISIT TABLE</string>
    <string name="pet_id">PET ID</string>
    <string name="office_id">OFFICE ID</string>
    <string name="service_id">SERVICE ID</string>
    <string name="reason">REASON</string>
    <string name="time_of_visit">TIME OF VISIT</string>
    <string name="address">ADDRESS</string>
    <string name="add_pet">ADD PET</string>
    <string name="update_pet_information">UPDATE PET INFORMATION</string>
    <string name="make_an_appointment">MAKE AN APPOINTMENT</string>
    <string name="regular_">Regular:</string>
    <string name="animal_">Animal:</string>
    <string name="name_">Name:</string>
    <string name="weight_">Weight:</string>
    <string name="enter_your_personal_data">Enter Your personal data</string>
    <string name="if_you_have_more_than_one_animal_you_can_add_them_after_registration_on_your_personal_page">(If You have more than one animal, you can add them after registration on Your personal page)</string>
    <string name="personal_code">personal code</string>
    <string name="i_am_not_a_client_yet">I AM NOT A CLIENT YET :(</string>
    <string name="i_am_a_worker">I AM A WORKER</string>
    <string name="show_only_upcoming_visits">SHOW ONLY UPCOMING VISITS</string>
    <string name="show_all_my_visits">SHOW ALL MY VISITS</string>
    <string name="back_to_profile">BACK TO PROFILE</string>
    <string name="client_s_personal_account">CLIENT`S PERSONAL ACCOUNT</string>
    <string name="full_nam">Full name:</string>
    <string name="addres">Address:</string>
    <string name="help">город, улица, дом, квартира</string>
    <string name="_7_9xx_xxx_xx_xx">+7(9XX)XXX-XX-XX</string>
    <string name="to_register_you_must_have_at_n_least_one_pet">To register You must have at\n least one pet</string>
    <string name="anima">Animal:</string>
    <string name="gende">Gender:</string>
    <string name="male_femal">male/female</string>
    <string name="date_of_birt">Date of Birth:</string>
    <string name="dd_mm_yyyy">dd.MM.yyyy</string>
    <string name="weigh">Weight:</string>
    <string name="weight_may_be_integer_or_ndouble_use">weight may be integer or \ndouble (use \'.\')</string>
    <string name="registering">REGISTERING</string>
</resources>