<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/back"
    tools:context=".ClientScheduleActivity"
    android:orientation="vertical">

            <TextView
                android:id="@+id/drug_request_header"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="80dp"
                android:fontFamily="monospace"
                android:gravity="center"
                android:text="@string/schedule_of_visit_table"
                android:textAllCaps="false"
                android:textColor="@color/cyan"
                android:textSize="20sp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:layout_marginTop="30dp"
                android:layout_marginRight="5dp"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/pet_column_1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center_horizontal"
                    android:text="@string/pet_id"
                    android:textStyle="bold"
                    android:textSize="13sp"
                    android:textColor="@color/cyan"/>

                <TextView
                    android:id="@+id/pet_column_2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center_horizontal"
                    android:text="@string/client_id"
                    android:textStyle="bold"
                    android:textSize="13sp"
                    android:textColor="@color/cyan"/>

                <TextView
                    android:id="@+id/pet_column_3"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center_horizontal"
                    android:text="@string/office_id"
                    android:textStyle="bold"
                    android:textSize="13sp"
                    android:textColor="@color/cyan"/>

                <TextView
                    android:id="@+id/pet_column_4"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center_horizontal"
                    android:text="@string/worker_id"
                    android:textStyle="bold"
                    android:textSize="13sp"
                    android:textColor="@color/cyan"/>

                <TextView
                    android:id="@+id/pet_column_5"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center_horizontal"
                    android:text="@string/service_id"
                    android:textStyle="bold"
                    android:textSize="13sp"
                    android:textColor="@color/cyan"/>

                <TextView
                    android:id="@+id/pet_column_6"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center_horizontal"
                    android:text="@string/reason"
                    android:textStyle="bold"
                    android:textSize="13sp"
                    android:textColor="@color/cyan"/>

                <TextView
                    android:id="@+id/pet_column_7"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center_horizontal"
                    android:text="@string/time_of_visit"
                    android:textStyle="bold"
                    android:textSize="13sp"
                    android:textColor="@color/cyan"/>

            </LinearLayout>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rw_client_schedule"
                android:layout_width="match_parent"
                android:layout_height="300dp"
                android:layout_marginTop="11dp"/>

    <Button
        android:id="@+id/show_only_upcoming"
        style="@style/Widget.AppCompat.Button"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="40dp"
        android:fontFamily="serif-monospace"
        android:text="@string/show_only_upcoming_visits"
        android:textSize="18sp"
        app:backgroundTint="@color/cyan" />
    <Button
        android:id="@+id/show_all"
        style="@style/Widget.AppCompat.Button"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:fontFamily="serif-monospace"
        android:text="@string/show_all_my_visits"
        android:textSize="18sp"
        app:backgroundTint="@color/cyan" />
    <Button
        android:id="@+id/back_to_profile"
        style="@style/Widget.AppCompat.Button"
        android:layout_width="250dp"
        android:layout_marginTop="40dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:fontFamily="serif-monospace"
        android:text="@string/back_to_profile"
        android:textSize="18sp"
        app:backgroundTint="@color/cyan" />

</LinearLayout>