<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.ScheduleTableFragment"
    android:background="@color/back">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:id="@+id/drug_request_header"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:fontFamily="monospace"
            android:gravity="center"
            android:text="@string/schedule_of_visit_table"
            android:textAllCaps="false"
            android:textColor="@color/cyan"
            android:textSize="24sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:layout_marginTop="20dp"
            android:layout_marginRight="5dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/pet_column_1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center_horizontal"
                android:text="@string/pet_id"
                android:textStyle="bold"
                android:textSize="13sp"
                android:textColor="@color/cyan"/>

            <TextView
                android:id="@+id/pet_column_2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center_horizontal"
                android:text="@string/client_id"
                android:textStyle="bold"
                android:textSize="13sp"
                android:textColor="@color/cyan"/>

            <TextView
                android:id="@+id/pet_column_3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center_horizontal"
                android:text="@string/office_id"
                android:textStyle="bold"
                android:textSize="13sp"
                android:textColor="@color/cyan"/>

            <TextView
                android:id="@+id/pet_column_4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center_horizontal"
                android:text="@string/worker_id"
                android:textStyle="bold"
                android:textSize="13sp"
                android:textColor="@color/cyan"/>

            <TextView
                android:id="@+id/pet_column_5"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center_horizontal"
                android:text="@string/service_id"
                android:textStyle="bold"
                android:textSize="13sp"
                android:textColor="@color/cyan"/>

            <TextView
                android:id="@+id/pet_column_6"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center_horizontal"
                android:text="@string/reason"
                android:textStyle="bold"
                android:textSize="13sp"
                android:textColor="@color/cyan"/>

            <TextView
                android:id="@+id/pet_column_7"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center_horizontal"
                android:text="@string/time_of_visit"
                android:textStyle="bold"
                android:textSize="13sp"
                android:textColor="@color/cyan"/>

        </LinearLayout>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rw_schedule"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="11dp"
            android:layout_marginBottom="50dp"/>
    </LinearLayout>

</FrameLayout>