<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.WorkerTableFragment"
    android:background="@color/back">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:id="@+id/employee_header"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:fontFamily="monospace"
            android:gravity="center"
            android:text="@string/employee_table"
            android:textAllCaps="false"
            android:textColor="@color/cyan"
            android:textSize="24sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:layout_marginTop="20dp"
            android:layout_marginRight="5dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/w_column_1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center_horizontal"
                android:text="@string/full_name_"
                android:textStyle="bold"
                android:textSize="13sp"
                android:textColor="@color/cyan"/>

            <TextView
                android:id="@+id/w_column_2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center_horizontal"
                android:text="@string/position_"
                android:textStyle="bold"
                android:textSize="13sp"
                android:textColor="@color/cyan"/>

            <TextView
                android:id="@+id/w_column_3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center_horizontal"
                android:text="@string/date_of_birth_"
                android:textStyle="bold"
                android:textSize="13sp"
                android:textColor="@color/cyan"/>

            <TextView
                android:id="@+id/w_column_4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center_horizontal"
                android:text="@string/phone_"
                android:textStyle="bold"
                android:textSize="13sp"
                android:textColor="@color/cyan"/>
        </LinearLayout>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rw_worker"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="50dp"/>
    </LinearLayout>

</FrameLayout>