<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/back"
    tools:context=".LoginActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/logo"
            android:layout_width="250dp"
            android:layout_height="250dp"
            android:layout_gravity="center"
            android:src="@drawable/logo_cyan" />

        <EditText
            android:id="@+id/login"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="30dp"
            android:fontFamily="monospace"
            android:hint="@string/login"
            android:inputType="textPersonName"
            android:text="wt1c07892w"/>

        <EditText
            android:id="@+id/password"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:ems="10"
            android:fontFamily="monospace"
            android:hint="@string/password"
            android:inputType="textPersonName"
            android:text="kyeffuiw"/>

        <Button
            android:id="@+id/button_ini"
            style="@style/Widget.AppCompat.Button"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="40dp"
            android:fontFamily="serif-monospace"
            android:text="@string/sign_in"
            android:textSize="18sp"
            app:backgroundTint="@color/cyan" />

        <Button
            android:id="@+id/button_client"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="105dp"
            android:fontFamily="serif-monospace"
            android:text="@string/i_am_a_client"
            android:textSize="18sp"
            app:backgroundTint="@color/cyan" />

    </LinearLayout>
</LinearLayout>